--- a/composer.json
+++ b/composer.json
@@ -36,11 +36,11 @@
         }
     ],
     "require": {
-        "php": "~7.4.0 || ~8.0.0 || ~8.1.0 || ~8.2.0",
+        "php": "~7.4.0 || ~8.0.0 || ~8.1.0 || ~8.2.0 || ~8.5.0",
         "laminas/laminas-mail": "^2.9",
         "laminas/laminas-http": "^2.8",
         "laminas/laminas-mime": "^2.7",
-        "laminas/laminas-servicemanager": "^3.11"
+        "laminas/laminas-servicemanager": "^3.11 || ^4.0"
     },
     "require-dev": {
         "psr/container": "^1.0 || ^2.0",
